--- a/src/components/liquid-glass/liquid-glass-styles.css
+++ b/src/components/liquid-glass/liquid-glass-styles.css
@@ -7,6 +7,7 @@
     height: calc(var(--height) * 1px);
     width: calc(var(--width) * 1px);
     border-radius: calc(var(--radius) * 1px);
+    z-index: 999999;
   }
 
   &::before {
@@ -16,44 +17,73 @@
     z-index: 0;
     overflow: hidden;
     border-radius: inherit;
+    pointer-events: none;
+    transition: all 0.3s ease-out;
 
-    background: light-dark(hsl(0 0% 100% / var(--frost, 0)),
-        hsl(0 0% 0% / var(--frost, 0)));
+    /* background: light-dark(
+      hsl(0 0% 100% / var(--frost, 0)),
+      hsl(0 0% 100% / var(--frost, 0))
+    ); */
 
-    /* box-shadow: 0 0 2px 1px light-dark(color-mix(in oklch, canvasText, #0000 85%),
-        color-mix(in oklch, canvasText, #0000 65%)) inset,
-      0 0 10px 4px light-dark(color-mix(in oklch, canvasText, #0000 90%),
-        color-mix(in oklch, canvasText, #0000 85%)) inset,
+    /* box-shadow: 0 0 2px 1px
+        light-dark(
+          color-mix(in oklch, canvasText, #0000 85%),
+          color-mix(in oklch, canvasText, #0000 65%)
+        )
+        inset,
+      0 0 10px 4px
+        light-dark(
+          color-mix(in oklch, canvasText, #0000 90%),
+          color-mix(in oklch, canvasText, #0000 85%)
+        )
+        inset,
       0px 4px 16px rgba(17, 17, 26, 0.05), 0px 8px 24px rgba(17, 17, 26, 0.05),
       0px 16px 56px rgba(17, 17, 26, 0.05),
       0px 4px 16px rgba(17, 17, 26, 0.05) inset,
       0px 8px 24px rgba(17, 17, 26, 0.05) inset,
       0px 16px 56px rgba(17, 17, 26, 0.05) inset; */
-      
+
     --glass-reflex-light: 1;
     --glass-reflex-dark: 1;
-    --c-light: #fff;
-    --c-dark: #000;
+    --c-light: rgba(255, 255, 255, 0.7);
+    --c-dark: rgba(255, 255, 255, 0.4);
 
-    --glass-reflex-color-light: color-mix(in srgb,
-        var(--c-light) calc(var(--glass-reflex-light) * 100%),
-        transparent);
-    --glass-reflex-color-dark: color-mix(in srgb,
-        var(--c-dark) calc(var(--glass-reflex-dark) * 100%),
-        transparent);
+    --glass-reflex-color-light: color-mix(
+      in srgb,
+      var(--c-light) calc(var(--glass-reflex-light) * 100%),
+      transparent
+    );
+    --glass-reflex-color-dark: color-mix(
+      in srgb,
+      var(--c-dark) calc(var(--glass-reflex-dark) * 100%),
+      transparent
+    );
 
-    --glass-reflex-color: light-dark(var(--glass-reflex-color-light),
-        var(--glass-reflex-color-dark));
-    box-shadow: inset 0 0 0 1px color-mix(in srgb, var(--glass-reflex-color) 10%, transparent),
+    --glass-reflex-color: light-dark(
+      var(--glass-reflex-color-light),
+      var(--glass-reflex-color-dark)
+    );
+    --glass-reflex-outer-color: light-dark(
+      rgba(0, 0, 0, 0.7),
+      rgba(255, 255, 255, 0.5)
+    );
+    box-shadow: inset 0 0 0 1px
+        color-mix(in srgb, var(--glass-reflex-color) 10%, transparent),
       inset 1.8px 3px 0px -2px color-mix(in srgb, var(--glass-reflex-color) 90%, transparent),
       inset -2px -2px 0px -2px color-mix(in srgb, var(--glass-reflex-color) 80%, transparent),
       inset -3px -8px 1px -6px color-mix(in srgb, var(--glass-reflex-color) 60%, transparent),
-      inset -0.3px -1px 4px 0px color-mix(in srgb, var(--glass-reflex-color) 12%, transparent),
-      inset -1.5px 2.5px 0px -2px color-mix(in srgb, var(--glass-reflex-color) 20%, transparent),
+      inset -0.3px -1px 4px 0px
+        color-mix(in srgb, var(--glass-reflex-color) 12%, transparent),
+      inset -1.5px 2.5px 0px -2px
+        color-mix(in srgb, var(--glass-reflex-color) 20%, transparent),
       inset 0px 3px 4px -2px color-mix(in srgb, var(--glass-reflex-color) 20%, transparent),
-      inset 2px -6.5px 1px -4px color-mix(in srgb, var(--glass-reflex-color) 10%, transparent),
-      0px 1px 5px 0px color-mix(in srgb, var(--glass-reflex-color) 10%, transparent),
-      0px 6px 16px 0px color-mix(in srgb, var(--glass-reflex-color) 8%, transparent);
+      inset 2px -6.5px 1px -4px
+        color-mix(in srgb, var(--glass-reflex-color) 10%, transparent),
+      0px 1px 5px 0px
+        color-mix(in srgb, var(--glass-reflex-outer-color) 10%, transparent),
+      0px 6px 16px 0px
+        color-mix(in srgb, var(--glass-reflex-outer-color) 8%, transparent);
+    background: light-dark(rgba(255, 255, 255, 0.15), rgba(0, 0, 0, 0.15));
   }
 
   &::after {
@@ -62,12 +92,13 @@
     z-index: -1;
     inset: 0;
     border-radius: inherit;
-    -webkit-backdrop-filter: blur(0px);
-    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(calc(var(--bd-blur, 0) * 1px));
+    backdrop-filter: blur(calc(var(--bd-blur, 0) * 1px));
     -webkit-filter: var(--filter-url, none);
     filter: var(--filter-url, none);
     overflow: hidden;
     isolation: isolate;
+    pointer-events: none;
   }
 
   .filter {
