--- a/src/App.css
+++ b/src/App.css
@@ -185,3 +185,7 @@ button {
 .wiggle-hover:hover:not(:disabled) :is(i, span) {
   animation: wiggle 0.6s ease-in-out infinite;
 }
+
+.wiggle-infinite {
+  animation: wiggle 0.6s ease-in-out infinite;
+}
