--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,8 @@
     rgba(255, 255, 255, 0.6),
     rgba(255, 255, 255, 0.12)
   );
+
+  --modal-body-bg: light-dark(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.2));
 }
 
 body {
