--- a/src/App.css
+++ b/src/App.css
@@ -114,10 +114,12 @@ button {
 /* Custom inside Liquid Glass */
 .liquid-glass.clickable {
   width: fit-content;
-  /* --bd-blur: 24; */
+  --bd-blur: 8;
 
   button {
-    /* background: transparent; */
+    backdrop-filter: none;
+    -webkit-backdrop-filter: none;
+    background: transparent;
     border: 1px solid transparent;
     border-radius: inherit;
   }
