change theme, video

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
   transition: background-color 0.5s ease; */
 
   /* background: url(https://raw.githubusercontent.com/lucasromerodb/liquid-glass-effect-macos/refs/heads/main/assets/flowers.jpg) center/cover; */
-  background-size: 600px;
+  /* background-size: 600px; */
   /* -webkit-animation: moveBackground 60s linear infinite;
   animation: moveBackground 60s linear infinite; */
 }
