--- a/src/App.css
+++ b/src/App.css
@@ -170,3 +170,28 @@ button {
 .wiggle-infinite {
   animation: wiggle 0.6s ease-in-out infinite;
 }
+
+.license-label-ultimate {
+  background: linear-gradient(
+    90deg,
+    light-dark(#1a1a1a, #fff),
+    light-dark(#ebe060, #ebe060),
+    light-dark(#ebe060, #ebe060),
+    light-dark(#1a1a1a, #fff)
+  );
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  background-size: 200% auto;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradientFlow 4s linear infinite;
+}
+
+@keyframes gradientFlow {
+  0% {
+    background-position: 0% center;
+  }
+
+  100% {
+    background-position: -200% center;
+  }
+}
